# Parsight

./: .gitignore  LICENSE  PROMOTION.md  README.md  start-backend.sh  start-frontend.sh  start.sh
backend/: .env.example  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: agent_factory.py  base.py  bi_agent.py  bi_builder_agents.py  bi_pipeline_agents.py  dashboard_agents.py  local_agents.py  recommendation_agent.py  relations_agent.py  understanding_agent.py
backend/app/models/: __init__.py  builder_session.py  business_knowledge.py  chat_history.py  database.py  file_record.py  llm_config.py  sheet_meta.py  space.py  user.py  user_preference.py
backend/app/routers/: __init__.py  admin.py  auth.py  bi.py  chat.py  data.py  health.py  relations.py  space.py  understanding.py  upload.py
backend/app/services/: __init__.py  ai_service.py  bi_blueprint_pipeline.py  bi_builder_context.py  bi_builder_creator.py  bi_builder_matcher.py  bi_builder_service.py  bi_builder_state.py  bi_context.py  bi_exceptions.py  bi_generation.py  bi_mvp_generation.py  bi_pipeline_logger.py  bi_planner.py  bi_profiler.py  bi_sql_builder.py  bi_thinking_journal.py  bi_understanding_gate.py  bi_understanding_tasks.py  chat_intent.py  db_service.py  deep_research.py  llm_client.py  llm_config_service.py  quick_qa.py  relations_verification.py  understanding_verification.py  xlsx_parser.py
backend/app/utils/: __init__.py  data_sampler.py  json_utils.py  reimport_validator.py  (+2 more)
backend/tests/: test_full_flow.py
(+104 files in other folders)
