[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parsight-backend"
version = "1.0.0"
description = "AI-powered BI backend for XLSX analysis"
authors = [{name = "shaoxia20240902"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/shaoxia20240902/Parsight"
Repository = "https://github.com/shaoxia20240902/Parsight"
Documentation = "https://github.com/shaoxia20240902/Parsight/tree/main/docs"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
py-modules = []
